PluggableAuthService changelog
==============================

PluggableAuthService 1.6.5 (unreleased)
---------------------------------------

- Launchpad #672694: In the ZODBRoleManager made it clearer that
  adding a removing a role does not have much effect if you do not do
  the same in the root of the site (at the bottom of the Security tab
  at manage_access).


PluggableAuthService 1.6.4 (2010-11-04)
---------------------------------------

- Don't fail on users defined in multiple user sources on the ZODBGroupManager
  listing page.


PluggableAuthService 1.6.3 (2010-02-01)
---------------------------------------

- Fixed xml templates directory path computation to allow reuse of 
  ``SimpleXMLExportImport`` class outside ``Products.PluggableAuthService``.


PluggableAuthService 1.6.2 (2009-11-16)
---------------------------------------

- Launchpad #420319:  Fix misconfigured ``startswith`` match type filter
  in ``plugins.DomainAuthHelper``.

- Fixed test setup for tests using page templates relying on the
  DefaultTraversable adapter.

- Fixed broken markup.


PluggableAuthService 1.6.1 (2008-11-20)
---------------------------------------

- Launchpad #273680:  Avoid expensive / incorrect dive into 'enumerateUsers'
  when trying to validate w/o either a real ID or login.

- Launchpad #300321:  ZODBGroupManager.enumerateGroups failed to find
  groups with unicode IDs.


PluggableAuthService 1.6 (2008-08-05)
-------------------------------------

- Fixed another deprecation for manage_afterAdd occurring when used
  together with Five (this time for the ZODBRoleManager class).

- Ensure the _findUser cache is invalidated if the roles or groups for
  a principal change.

- Launchpad #15569586:  docstring fix.

- Factored out 'filter' logic into separate classes;  added filters
  for 'startswith' test and (if the IPy module is present) IP-range
  tests.  See https://bugs.launchpad.net/zope-pas/+bug/173580 .
